--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "material-ui": "^0.20.0",
+        "material-design-icons": "^3.0.1",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-router": "^4.2.0",
