--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "flux": "^3.1.3",
         "material-design-icons": "^3.0.1",
         "material-ui": "^0.20.0",
+        "material-ui-pagination": "^1.1.6",
+        "moment": "^2.21.0",
         "react": "^16.2.0",
+        "react-color": "^2.14.0",
         "react-dom": "^16.2.0",
+        "react-google-maps": "^9.4.5",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
         "react-tap-event-plugin": "^3.0.2"
