--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "cartalyst/sentinel": "2.0.*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.0",
+        "phpoffice/phpspreadsheet": "^1.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
