--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "flux": "^3.1.3",
         "material-design-icons": "^3.0.1",
         "material-ui": "^0.20.0",
+        "material-ui-fullscreen-dialog": "^0.7.2",
         "material-ui-pagination": "^1.1.6",
         "moment": "^2.21.0",
         "react": "^16.2.0",
