--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-google-maps": "^9.4.5",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
-        "react-tap-event-plugin": "^3.0.2"
+        "react-tap-event-plugin": "^3.0.2",
+        "uuid": "^3.2.1"
     }
 }
