--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
         "react-tap-event-plugin": "^3.0.2",
+        "react-tooltip": "^3.5.1",
         "uuid": "^3.2.1"
     }
 }
