--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "@material-ui/icons": "^1.1.0",
         "flux": "^3.1.3",
         "material-design-icons": "^3.0.1",
         "material-ui": "^0.20.0",
