--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@material-ui/icons": "^1.1.0",
+        "chart.js": "^2.7.2",
         "flux": "^3.1.3",
         "material-design-icons": "^3.0.1",
         "material-ui": "^0.20.0",
@@ -29,8 +30,10 @@
         "material-ui-textfield-icon": "^0.2.3",
         "moment": "^2.21.0",
         "react": "^16.2.0",
+        "react-chartjs-2": "^2.7.2",
         "react-color": "^2.14.0",
         "react-dom": "^16.2.0",
+        "react-google-charts": "^1.6.6",
         "react-google-maps": "^9.4.5",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
