--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "@material-ui/core": "^1.3.0",
         "@material-ui/icons": "^1.1.0",
         "chart.js": "^2.7.2",
         "flux": "^3.1.3",
